aks-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: testdeployment
  name: aks-test
  labels:
    app: aks-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aks-test
  template:
    metadata:
      labels:
        app: aks-test
    spec:
      containers:
      - name: aks-test
        image: oebbacrcoresbxweu.azurecr.io/akstest:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: acr-secret
