internal-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.7.36
  ports:
  - port: 80
  selector:
    app: my-nginx
