nodeport-aks-test.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: testdeployment
  name: aks-test
  labels:
    app: aks-test
    tier: aks-test
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  # type: NodePort
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: aks-test
    tier: aks-test
