ag-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ag-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: my-nginx
            port:
              number: 80
